TestCases/Errors/Haversine/observations/sst/aut_07_obs.spm
obs r17-c5 0.000649182386227179
obs r18-c5 0.000390807866246086
obs r19-c5 1e-08
obs r20-c5 1e-08
obs r15-c6 0.00208889361792603
obs r16-c6 0.00123793265559932
obs r17-c6 0.00135542602951736
obs r18-c6 0.000621061427959989
obs r19-c6 1e-08
obs r20-c6 1e-08
obs r14-c7 0.000700942644357335
obs r15-c7 0.00153027886425406
obs r16-c7 0.00189694115178259
obs r20-c7 1e-08
obs r14-c8 0.000878632534482588
obs r15-c8 0.0014949560589266
obs r5-c12 0.0128247816269421
obs r6-c15 0.0082971924218215
obs r12-c18 0.002
obs r8-c19 0.000976430976430976
obs r9-c19 0.00230976430976431
obs r10-c19 0.0102324929971989
obs r11-c19 0.0111070261437908
obs r12-c19 0.002
obs r4-c20 0.00177777777777778
obs r5-c20 0.00116830065359477
obs r6-c20 0.00278305089742143
obs r9-c20 0.00133333333333333
obs r10-c20 0.0129411764705882
obs r4-c21 0.00222222222222222
obs r5-c21 1e-08
obs r4-c22 0.00201072386058981
error_value r17-c5 0.2
error_value r18-c5 0.2
error_value r19-c5 0.2
error_value r20-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r18-c6 0.2
error_value r19-c6 0.2
error_value r20-c6 0.2
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r20-c7 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r5-c12 0.2
error_value r6-c15 0.2
error_value r12-c18 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r12-c19 0.2
error_value r4-c20 0.2
error_value r5-c20 0.2
error_value r6-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r4-c21 0.2
error_value r5-c21 0.2
error_value r4-c22 0.2
